# synthrt

./: .gitignore  CMakeLists.txt
dsinfer/: CMakeLists.txt
dsinfer/include/dsinfer/Support/: PhonemeDict.h
dsinfer/lib/Support/: PhonemeDict.cpp
dsinfer/plugins/inferenceinterpreters/acoustic/: AcousticInference.cpp
dsinfer/plugins/inferenceinterpreters/duration/: DurationInference.cpp
dsinfer/plugins/inferenceinterpreters/pitch/: PitchInference.cpp
dsinfer/plugins/inferenceinterpreters/variance/: VarianceInference.cpp
dsinfer/plugins/inferenceinterpreters/vocoder/: VocoderInference.cpp
dsinfer/tests/: CMakeLists.txt
dsinfer/tests/auto/: CMakeLists.txt
dsinfer/tests/auto/Support/: PhonemeDict.cpp
dsinfer/tests/txtdict/: main.cpp
dsinfer/tools/: CMakeLists.txt
dsinfer/tools/cli/: main.cpp
dsinfer/tools/package/: Archive.cpp  Archive.h  CMakeLists.txt  main.cpp
dsinfer/util/inferutil/include/inferutil/: TensorHelper.h
dsinfer/util/inferutil/include/inferutil/detail/: Parser_impl.h
scripts/: setup-onnxruntime.cmake
synthrt/: CMakeLists.txt
